@@ -10,7 +10,7 @@ setup(name="pyblosxom",
       author_email="wari@home.wari.org",
       url="http://roughingit.subtlehints.net/pyblosxom",
       packages=['Pyblosxom', 'Pyblosxom.cache', 'Pyblosxom.entries',
-      		'Pyblosxom.renderers', 'Pyblosxom.plugins', 'Pyblosxom.xmlrpcplugins'],
+      		'Pyblosxom.renderers'],
       licence = 'Python',
       long_description =
 """Pyblosxom is a weblog engine that users the filesystem as the database of
